feat: fix duplicate titles processing and improve catalog search
Added a choice menu for duplicates, made playlist items searchable, and separated Search from Filter logic.